--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,7 +1,16 @@
+upstream default_app {
+    server localhost:8000;
+}
+
+upstream adminer {
+    server localhost:8080;
+}
+
 server {
     listen 80;
     listen [::]:80;
     server_name chatuz.site;
+    
     location / {
         return 301 https://$host$request_uri;
     }
@@ -10,10 +19,27 @@ server {
         root /tmp/acme_challenge;
     }
 }
+
 server {
     listen 443 ssl;
     listen [::]:443 ssl http2;
     server_name chatuz.site;
+    
     ssl_certificate /etc/letsencrypt/live/chatuz.site/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/chatuz.site/privkey.pem;
+    
+    location / {
+        proxy_pass http://default_app;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /adminer/ {
+        proxy_pass http://adminer;
+    }
+
+    location /static/ {
+        alias /static/;
+    }
 }
