--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -29,7 +29,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/chatuz.site/privkey.pem;
     
     location / {
-        proxy_pass http://default_app;
+        proxy_pass https://default_app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
